[gd_scene load_steps=2 format=3 uid="uid://dha6p7kvrdqrq"]

[ext_resource type="Script" path="res://Interactions/interaction area/InteractionArea_spike.gd" id="1_4jvlb"]

[node name="InteractionArea_spike" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_4jvlb")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
